65. Refactor OpenAPI Schema
