# apifirst-server/src/main/java/com/rperezv365/apifirst/apifirstserver/bootstrap/DataLoader.java
@@ -95,7 +95,7 @@ public class DataLoader implements CommandLineRunner {
                         .build()))
                 .cost("12.99")
                 .price("14.99")
-                .dimentions(Dimentions.builder()
+                .dimensions(Dimensions.builder()
                         .height(1)
                         .length(2)
                         .width(3)
@@ -114,7 +114,7 @@ public class DataLoader implements CommandLineRunner {
                         .build()))
                 .cost("12.99")
                 .price("14.99")
-                .dimentions(Dimentions.builder()
+                .dimensions(Dimensions.builder()
                         .height(1)
                         .length(2)
                         .width(3)
